Add Previous Button
Chapter 2 - Challenge 2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,20 @@
 
     </LinearLayout>
 
-    <Button
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/prev_button"
+            android:drawableEnd="@drawable/arrow_left"
+            android:drawablePadding="4dp"
+            />
+
+        <Button
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,4 +53,7 @@
         android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="4dp"
         />
+
+
+    </LinearLayout>
 </LinearLayout>
